[gd_scene load_steps=23 format=3 uid="uid://2tk0tt8mc6av"]

[ext_resource type="FontFile" uid="uid://brrjciasy55dw" path="res://assets/kurland.ttf" id="1_k5xay"]
[ext_resource type="Script" path="res://Tiny_sword/management/pause.gd" id="1_x5777"]
[ext_resource type="Texture2D" uid="uid://cks6cf0mym2qb" path="res://assets/UI/Banners/Banner_Connection_Down.png" id="2_th7wg"]
[ext_resource type="Texture2D" uid="uid://dkcaepkewqryq" path="res://assets/UI/Banners/Banner_Connection_Left.png" id="3_y42jq"]
[ext_resource type="Texture2D" uid="uid://djitlvd0in3pg" path="res://assets/UI/Banners/Banner_Connection_Right.png" id="4_sy2fh"]
[ext_resource type="Texture2D" uid="uid://bjt4st3yfh553" path="res://assets/UI/Banners/Banner_Connection_Up.png" id="5_1hs74"]
[ext_resource type="Texture2D" uid="uid://durh6dctnp5u7" path="res://assets/UI/Banners/Banner_Horizontal.png" id="6_me053"]
[ext_resource type="Texture2D" uid="uid://d2jc6vgdjr48g" path="res://assets/UI/Banners/Banner_Vertical.png" id="7_14trk"]
[ext_resource type="Texture2D" uid="uid://d3w4n13j1l6ot" path="res://assets/UI/Banners/Carved_3Slides.png" id="8_ajxcp"]
[ext_resource type="Texture2D" uid="uid://5o300t05h8my" path="res://assets/UI/Banners/Carved_9Slides.png" id="9_ycnof"]
[ext_resource type="Texture2D" uid="uid://bx77ypdgcs6br" path="res://assets/UI/Banners/Carved_Regular.png" id="10_qlvkk"]
[ext_resource type="Texture2D" uid="uid://cuj5o3ywiejcc" path="res://assets/UI/Ribbons/Ribbon_Blue_3Slides.png" id="12_hve5o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oyex6"]
texture = ExtResource("2_th7wg")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cbhyf"]
texture = ExtResource("3_y42jq")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sa6md"]
texture = ExtResource("4_sy2fh")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ghjpv"]
texture = ExtResource("5_1hs74")
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ct2dq"]
texture = ExtResource("6_me053")
3:2/0 = 0
4:2/0 = 0
7:2/0 = 0
8:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
8:10/0 = 0
9:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2pth0"]
texture = ExtResource("7_14trk")
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uxoly"]
texture = ExtResource("8_ajxcp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_be3ha"]
texture = ExtResource("9_ycnof")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ombof"]
texture = ExtResource("10_qlvkk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_jw3lj"]
sources/0 = SubResource("TileSetAtlasSource_oyex6")
sources/1 = SubResource("TileSetAtlasSource_cbhyf")
sources/2 = SubResource("TileSetAtlasSource_sa6md")
sources/3 = SubResource("TileSetAtlasSource_ghjpv")
sources/4 = SubResource("TileSetAtlasSource_ct2dq")
sources/5 = SubResource("TileSetAtlasSource_2pth0")
sources/6 = SubResource("TileSetAtlasSource_uxoly")
sources/7 = SubResource("TileSetAtlasSource_be3ha")
sources/8 = SubResource("TileSetAtlasSource_ombof")

[node name="Pause_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5777")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 0.721569)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jw3lj")
format = 2
layer_0/tile_data = PackedInt32Array(65565, 1, 3, 131101, 1, 4, 196637, 1, 5, 262173, 1, 6, 327709, 1, 7, 393245, 1, 8, 458781, 1, 9, 524317, 1, 10, 65566, 65537, 3, 131102, 65537, 4, 196638, 65537, 5, 262174, 65537, 6, 327710, 65537, 7, 393246, 65537, 8, 458782, 65537, 9, 524318, 65537, 10, 31, 131073, 2, 65567, 131073, 3, 131103, 131073, 4, 196639, 131073, 5, 262175, 131073, 6, 327711, 131073, 7, 393247, 131073, 8, 458783, 131073, 9, 524319, 131073, 10, 32, 196609, 2, 65568, 262148, 3, 131104, 262148, 4, 196640, 262148, 5, 262176, 262148, 6, 327712, 262148, 7, 393248, 262148, 8, 458784, 262148, 9, 33, 131074, 2, 65569, 327684, 3, 131105, 327684, 4, 196641, 327684, 5, 262177, 327684, 6, 327713, 327684, 7, 393249, 327684, 8, 458785, 327684, 9, 65570, 393220, 3, 131106, 393220, 4, 196642, 393220, 5, 262178, 393220, 6, 327714, 393220, 7, 393250, 393220, 8, 458786, 393220, 9, 65571, 458756, 3, 131107, 458756, 4, 196643, 458756, 5, 262179, 458756, 6, 327715, 458756, 7, 393251, 458756, 8, 458787, 458756, 9, 36, 458753, 2, 65572, 262148, 3, 131108, 262148, 4, 196644, 262148, 5, 262180, 262148, 6, 327716, 262148, 7, 393252, 262148, 8, 458788, 262148, 9, 37, 524289, 2, 65573, 327684, 3, 131109, 327684, 4, 196645, 327684, 5, 262181, 327684, 6, 327717, 327684, 7, 393253, 327684, 8, 458789, 327684, 9, 38, 458754, 2, 65574, 393220, 3, 262182, 393220, 6, 327718, 393220, 7, 34, 196610, 2, 35, 262146, 2, 131110, 393220, 4, 196646, 393220, 5, 393254, 393220, 8, 458790, 393220, 9, 39, 524290, 2, 65575, 458756, 3, 131111, 458756, 4, 196647, 458756, 5, 262183, 458756, 6, 327719, 458756, 7, 393255, 458756, 8, 458791, 458756, 9, 40, 589826, 2, 65576, 589826, 3, 131112, 589826, 4, 196648, 589826, 5, 262184, 589826, 6, 327720, 589826, 7, 393256, 589826, 8, 458792, 589826, 9, 524328, 589826, 10, 65577, 655362, 3, 131113, 655362, 4, 196649, 655362, 5, 262185, 655362, 6, 327721, 655362, 7, 393257, 655362, 8, 458793, 655362, 9, 524329, 655362, 10, 65578, 720898, 3, 131114, 720898, 4, 196650, 720898, 5, 262186, 720898, 6, 327722, 720898, 7, 393258, 720898, 8, 458794, 720898, 9, 524330, 720898, 10)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 456.5
offset_top = 38.0
offset_right = 695.5
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_k5xay")
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575, 392.8)
scale = Vector2(1.4, 1.4)
texture = ExtResource("12_hve5o")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(575, 491.8)
scale = Vector2(1.4, 1.4)
texture = ExtResource("12_hve5o")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(575, 590.8)
scale = Vector2(1.4, 1.4)
texture = ExtResource("12_hve5o")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = 27.7999
offset_right = 157.0
offset_bottom = 284.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 40

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_k5xay")
theme_override_font_sizes/font_size = 48
text = "Resume"
flat = true

[node name="MainMenu" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_k5xay")
theme_override_font_sizes/font_size = 48
text = "Menu
"
flat = true

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_k5xay")
theme_override_font_sizes/font_size = 48
keep_pressed_outside = true
text = "Quit"
flat = true

[connection signal="pressed" from="GridContainer/Resume" to="." method="on_resume_pressed"]
[connection signal="pressed" from="GridContainer/MainMenu" to="." method="on_main_menu_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="on_quit_pressed"]
